--- a/css.project33/index.html
+++ b/css.project33/index.html
@@ -1,11 +1,16 @@
 
 <!DOCTYPE html>
-<html 1ang="en"
- <head></head>
+<html lang="en">
+ <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>css</title>CSS
+    <link rel="stylesheet" href="css/mody.css">
+ </head>
 <body>
-
-    <div class="one">one</div>
-    <div class="two">two</div>
-
+<table>
+    <thead></thead>
+    <tbody></tbody> 
+    
  </body>
 </html>
+
