--- a/css.project60/index.html
+++ b/css.project60/index.html
@@ -12,4 +12,4 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt quos, ex iste, similique ducimus eius quod accusantium delectus neque inventore et culpa reiciendis id fugit expedita sed, perspiciatis eaque.
             </p>
        </body> 
-       </html>co
+       </html>
