--- a/css.project68/index.html
+++ b/css.project68/index.html
@@ -5,6 +5,7 @@
        <meta class="viewport">
         <link rel="stylesheet" type="text/css" href="css/mody.css">
        </head> 
+       <!-- border-margin -->
        <body>
             <div class="parent">
             <div>1</div>
