--- a/css.project profile/index.html
+++ b/css.project profile/index.html
@@ -15,6 +15,6 @@
   <img src="https://th.bing.com/th/id/OIP.0SoZ0ImuvAZwj3BlzzCLMwAAAA?rs=1&pid=ImgDetMain"/>
   <h2>Hero dog</h2>
   
-  <span class="left bottom">tel: 991 118 ***</span>
+  <span class="left bottom">namber:13* *** ***</span>
   <span class="right bottom">adress: deasok</span>
 </div>
